name:                xml-builder
version:             0.3.0.0
synopsis:            XML Building DSL, much in the same as blaze-html
-- description:
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Text.XML.Builder
  build-depends:
      base         >=4.7 && < 4.9
    , xml-conduit
    , containers
    , mtl
    , semigroups
    , text
    , xml-conduit
  hs-source-dirs:      src
  default-language:    Haskell2010
